--- a/deploy/olm-catalog/prod/7.10.0-1/manifests/businessautomation-operator.7.10.0-1.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/prod/7.10.0-1/manifests/businessautomation-operator.7.10.0-1.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry.stage.redhat.io/rhpam-7/rhpam-rhel8-operator:7.10.0
-    createdAt: "2021-01-06 08:56:56"
+    createdAt: "2021-01-06 10:56:15"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -17,7 +17,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.10.0
+  name: businessautomation-operator.7.10.0-1
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -435,7 +435,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.10.0
+    operated-by: businessautomation-operator.7.10.0-1
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -447,9 +447,9 @@ spec:
   maturity: stable
   provider:
     name: Red Hat
-  replaces: businessautomation-operator.7.9.1
+  replaces: businessautomation-operator.7.9.1-1
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.10.0
-  version: 7.10.0
+      operated-by: businessautomation-operator.7.10.0-1
+  version: 7.10.0-1
