--- a/deploy/olm-catalog/dev/7.11.0-1/manifests/businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/dev/7.11.0-1/manifests/businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:7.11.0
-    createdAt: "2021-03-23 08:38:44"
+    createdAt: "2021-03-24 09:00:45"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -17,7 +17,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.11.0-1-dev-kzxkmx7l28
+  name: businessautomation-operator.7.11.0-1-dev-fh4w2xn5lv
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -189,7 +189,7 @@ spec:
                 - name: RELATED_IMAGE_PAM_DASHBUILDER_IMAGE_7.11.0
                   value: registry.redhat.io/rhpam-7/rhpam-dashbuilder-rhel8:7.11.0
                 - name: RELATED_IMAGE_OSE_CLI_IMAGE_7.11.0
-                  value: registry.redhat.io/openshift3/ose-cli:v3.11
+                  value: registry.redhat.io/openshift4/ose-cli:v4.7
                 - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_7.11.0
                   value: registry.redhat.io/rhscl/mysql-80-rhel7:latest
                 - name: RELATED_IMAGE_POSTGRESQL_PROXY_IMAGE_7.11.0
@@ -219,7 +219,7 @@ spec:
                 - name: RELATED_IMAGE_PAM_DASHBUILDER_IMAGE_7.10.1
                   value: registry.redhat.io/rhpam-7/rhpam-dashbuilder-rhel8:7.10.1
                 - name: RELATED_IMAGE_OSE_CLI_IMAGE_7.10.1
-                  value: registry.redhat.io/openshift3/ose-cli:v3.11
+                  value: registry.redhat.io/openshift4/ose-cli:v4.7
                 - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_7.10.1
                   value: registry.redhat.io/rhscl/mysql-80-rhel7:latest
                 - name: RELATED_IMAGE_POSTGRESQL_PROXY_IMAGE_7.10.1
@@ -244,8 +244,6 @@ spec:
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.2
                 - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.1
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.1
-                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_3
-                  value: registry.redhat.io/openshift3/oauth-proxy:latest
                 image: quay.io/kiegroup/kie-cloud-operator:7.11.0
                 imagePullPolicy: Always
                 name: business-automation-operator
@@ -413,7 +411,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.11.0-1-dev-kzxkmx7l28
+    operated-by: businessautomation-operator.7.11.0-1-dev-fh4w2xn5lv
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -429,5 +427,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.11.0-1-dev-kzxkmx7l28
-  version: 7.11.0-1+kzxkmx7l28
+      operated-by: businessautomation-operator.7.11.0-1-dev-fh4w2xn5lv
+  version: 7.11.0-1+fh4w2xn5lv
