--- a/deploy/olm-catalog/test/7.11.0-1/manifests/businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/test/7.11.0-1/manifests/businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry-proxy.engineering.redhat.com/rh-osbs/rhpam-7-rhpam-rhel8-operator:7.11.0
-    createdAt: "2021-03-24 09:00:46"
+    createdAt: "2021-03-25 09:58:39"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -17,7 +17,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.11.0-1-dev-6ngfvn5jss
+  name: businessautomation-operator.7.11.0-1-dev-fbwnrwmrs9
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -234,16 +234,6 @@ spec:
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.7
                 - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.6
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.6
-                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.5
-                  value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.5
-                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.4
-                  value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.4
-                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.3
-                  value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.3
-                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.2
-                  value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.2
-                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.1
-                  value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.1
                 image: registry-proxy.engineering.redhat.com/rh-osbs/rhpam-7-rhpam-rhel8-operator:7.11.0
                 imagePullPolicy: Always
                 name: business-automation-operator
@@ -411,7 +401,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.11.0-1-dev-6ngfvn5jss
+    operated-by: businessautomation-operator.7.11.0-1-dev-fbwnrwmrs9
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -427,5 +417,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.11.0-1-dev-6ngfvn5jss
-  version: 7.11.0-1+6ngfvn5jss
+      operated-by: businessautomation-operator.7.11.0-1-dev-fbwnrwmrs9
+  version: 7.11.0-1+fbwnrwmrs9
